# foody-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  fly.toml  ingredients.csv  ingredients.sql  justfile  mprocs.yaml  schema.graphql
.github/: dependabot.yml
.github/workflows/: ci.yaml  fly.yaml  frontend.yaml  playwright.yml  playwright.yml.off
ai/: frontend-analysis.md
config/: development.yaml  production.yaml  proxy.yaml  test.yaml
dbs/: seed.sqlite  test.sqlite
examples/: playground.rs
frontend/: .gitignore  biome.json  codegen.ts  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.js
frontend/e2e/: login-flow.spec.ts
frontend/src/: app.css  editRecipeForm.test.ts  editRecipeForm.ts  index.css  indexPage.tsx  ingredientsPage.tsx  loginPage.tsx  main.tsx  navbar.tsx  quantities.test.js  quantities.ts  recipesPage.tsx  routeTree.gen.ts  shoppingPage.tsx  testSetup.js
migration/: Cargo.toml
migration/src/: lib.rs  m20231225_211837_ingredients.rs  m20231225_212415_shoppinglists.rs  m20231225_213137_quantities.rs  m20231225_213554_ingredients_in_shoppinglists.rs  m20240103_132826_recipes.rs  m20240103_144013_ingredients_in_recipes.rs  m20240104_160607_change_source_to_just_text.rs  m20240107_090816_change_quanitty_value_to_float.rs  m20240107_210844_make_ingredient_name_unique.rs  m20240321_201052_alert_ingredients_in_shoppinglist_track_recipes.rs  m20240413_203033_remove_notes.rs  m20240606_074154_tags.rs  (+25 more)
ops/: README.md
src/: app.rs  lib.rs
(+170 files in other folders)
