[workspace]

[package]
name = "foody"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

loco-rs = { workspace = true }
migration = { path = "migration" }

serde = { version = "^1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.33"
eyre = "0.6"
tokio = { version = "^1", default-features = false }
async-trait = "0.1.81"
tracing = "0.1.40"
chrono = "0.4"
validator = { version = "0.20" }
sea-orm = { version = "1.0.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }

axum = "^0.8"
include_dir = "^0.7"
uuid = { version = "1.6.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
regex-lite = "0.1.5"
rpassword = "7.3.1"
dialoguer = { version = "0.11.0", default-features = false }
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"

[[bin]]
name = "foody-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "3.0.0"
rstest = "0.26"
loco-rs = { workspace = true, features = ["testing"] }
insta = { version = "1.34.0", features = [
  "redactions",
  "yaml",
  "json",
  "filters",
] }

[workspace.dependencies]
loco-rs = { version = "0.16.0" }
